# renku-python

./: .coveragerc  .coveralls.yml  .dockerignore  .editorconfig  .env  .githint.json  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  .travis.yml  =3.8.0  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.rst  DEVELOPING.rst  Dockerfile  Dockerfile.base  Dockerfile.cli  Dockerfile.gitlab-runner  Dockerfile.gitlab-runner-renga  Dockerfile.notebook.template  Dockerfile.renga-python  Dockerfile.renku-python  Dockerfile.scheduler  Dockerfile.svc  Dockerfile.template  Dockerfile.traefik  Dockerfile.worker  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  QA_PROTOCOL.rst  README.rst  RELEASE-NOTES.rst  _sidebar.rst.inc  (+31 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  main.workflow  pr-status-label.json  pr_labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement_request.md  proposal.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: acceptance-tests.yml  automerge.yml  black.yml  cheatsheet.yml  check_documentation.yml  combine-dependabot-updates.yml  deploy.yml  github-project.yml  integration_tests.yml  labeler.yml  pipfile-update.yml  publish_shacl.yml  publish_templates.yaml  pypi-release.yml  release.yml  semantic_pr.yml  test.yml  test_deploy.yml  test_publish.yml
.travis/: deploy-docker.sh
.tx/: config
cache-cleanup-job/: Dockerfile  README.md  cleanup.sh
cwl-upgrader/: cwl-upgrader-typing.patch  cwl-upgrader.nix
data/dataset-test-url-2/: HvXgLUCnmOk4vVuq  Publica
design/: README.md  rfc-template.md
design/001-new-workflow-commands/: 001-new-workflow-commands.md  grouped-run-metadata.drawio  looped-run-metadata.drawio  run-metadata.dot  run-metadata.drawio  user-story-workflow-execution-with-extensive-parameter-space.md
design/002-core-service-api-versioning/: 002-core-service-api-versioning.md  request-flow.drawio
design/003-interactive-session/: 003-interactive-session.md
docs/: Makefile  api.rst  authors.rst  buckets.rst  changes.rst  cheatsheet.rst  cheatsheet_hash  cheatsheet_json_hash  cli.rst  client.rst  commands.rst  comparison.rst  conf.py  configuration.rst  contributing.rst  cwl.rst  datasets.rst  examplesapp.rst  gensidebar.py  gettingstarted.rst  glossary.rst  index.rst  installation.rst  internals.rst  introduction.rst  license.rst  make.bat  management.rst  models.rst  plugins.rst  projects.rst  provenance.rst  spelling_wordlist.txt  usage.rst
docs/_ext/: cheatsheet.py
docs/_templates/: about.html  latex.tex_t  layout.html
docs/cheatsheet/: conf.py
docs/how-to-guides/: hpc.rst  implementing_a_provider.rst  index.rst  provider.rst  shell-integration.rst  tracking-workflows.rst
docs/models/: cwl.rst  datasets.rst  index.rst  projects.rst  provenance.rst  refs.rst  workflow.rst
docs/reference/: api.rst  commands.rst  core.rst  database.rst  gateways.rst  index.rst  management.rst  plugins.rst  service.rst  service_errors.rst
examples/: app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py
helm-chart/: README.rst
helm-chart/renku-core/: Chart.yaml  requirements.yaml  values.schema.json  values.yaml
helm-chart/renku-core-service/: Chart.yaml  values.yaml
load-tests/: README.md  class-scenario.js  example.config.js  fileUpload.js  oauth.js  parallelRequests.js  projectMigration.js
renga/: __init__.py  _compat.py  _swagger.py  cli.py  client.py  config.py  errors.py  ext.py  notebook.py  utils.py  version.py  views.py
renga/api/: __init__.py  _datastructures.py  authorization.py  client.py  datasets.py  deployer.py  explorer.py  projects.py  repository.py  storage.py
renga/cli/: .gitlab-ci.yml  __init__.py  _ascii.py  _client.py  _config.py  _echo.py  _git.py  _graph.py  _group.py  _options.py  _repo.py  _token.py  _version.py  add.py  dataset.py  datasets.py  deployments.py  endpoint.py  env.py  import.py  init.py  io.py  log.py  login.py  notebook.py  notebooks.py  run.py  runner.py  schema.py  status.py  update.py  workflow.py  workon.py
renga/client/: __init__.py  _datastructures.py  _utils.py  authorization.py  deployer.py  projects.py  storage.py
renga/clients/: __init__.py  _datastructures.py  _utils.py  deployer.py  knowledge_graph.py  project.py  projects.py  storage.py
renga/data/: __init__.py  gitignore.default
renga/models/: _datastructures.py  _jsonld.py  _tabulate.py  dataset.py  datasets.py  deployer.py  projects.py  storage.py
renga/notebook/: __init__.py  oic.py
renku/: __init__.py  __main__.py  __version__.py  _compat.py  _contexts.py  api.py  cli.py  client.py  errors.py  version.py  version.py.tmpl
renku/api/: __init__.py  _git.py  authorization.py  client.py  config.py  dataset.py  datasets.py  project.py  repository.py  storage.py
renku/cli/: .gitlab-ci.yml  Dockerfile  __init__.py  __main__.py  _ascii.py  _client.py  _config.py  _cwl.py  _docker.py  _echo.py  _exc.py  _format.py  _git.py  _graph.py  _group.py  _options.py  _version.py  add.py  clone.py  cluster.py  config.py  dataset.py  deployments.py  doctor.py  endpoint.py  env.py  exception_handler.py  githooks.py  graph.py  image.py  init.py  io.py  log.py  login.py  migrate.py  move.py  notebooks.py  project.py  pull.py  remove.py  (+15 more)
renku/command/: __init__.py  clone.py  config.py  cwl_runner.py  dataset.py  docker.py  doctor.py  echo.py  gc.py  git.py  githooks.py  graph.py  group.py  init.py  lfs.py  log.py  login.py  mergetool.py  migrate.py  move.py  options.py  project.py  remove.py  rerun.py  rollback.py  run.py  save.py  session.py  status.py  storage.py  template.py  update.py  util.py  version.py  workflow.py
renku/core/: __init__.py  commands.py  compat.py  config.py  constant.py  (+13 more)
snap/: snapcraft.yaml
tests/: __init__.py  conftest.py  constant.py  test_cli.py  test_client.py  test_clients_graph_mutation.py  test_cwl.py  test_dataset.py  test_examples_app.py  test_jsonld.py  test_knowledge_graph_client.py  test_notebook.py  test_projects.py  test_renga.py  test_serialization.py  utils.py
(+1163 files in other folders)
